# analytics_dashboards

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  README.md  dashboard_runner.py  pyproject.toml
analytics_dashboards/: dashboard.py  event_duration.py  event_severity.py  events_annual_frequency.py  events_per_year.py  exposure_comparison.py  frequency_annual_breach.py
analytics_dashboards/common/: get_data.py  plotting_support.py
configuration/: config.json
notebooks/: data_records_impacted.ipynb  event_duration.ipynb  event_severity.ipynb  events_per_year.ipynb  exposure_comparison.ipynb  frequency_annual-breach.ipynb  frequency_annual.ipynb
notebooks/common/: get_data.py  plotting_support.py
notebooks/resources/: SIC_code_map.csv
